--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "path": "^0.12.7",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
