--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "repository": "https://github.com/nicodewet/hello-world-react.git",
   "author": "Nico de Wet <nico@nicodewet.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
   "dependencies": {
+    "html-webpack-plugin": "^2.29.0",
     "path": "^0.12.7",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
