--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "html-webpack-plugin": "^2.29.0",
     "path": "^0.12.7",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1"
   },
